css fix for modals on mobile

--- a/src/sass/gi/partials/_gi-modal.scss
+++ b/src/sass/gi/partials/_gi-modal.scss
@@ -1,11 +1,20 @@
 .gi-app {
-  
+
   .va-modal {
     background-color: rgba($color-gray-dark, .8);
     padding: 10px;
 
+    @include media-maxwidth($small-screen) {
+      overflow-y: scroll;
+    }
+
     .va-modal-inner {
       max-width: 600px;
+
+      @include media-maxwidth($small-screen) {
+        transform: none;
+        top: 0;
+      }
 
       .va-modal-close {
         margin: 12.5px 12.5px 12.5px 0;
